--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "reactpoei",
   "version": "0.1.0",
+  "proxy": "http://localhost:3000",
   "private": true,
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object" : "^7.16.7",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -14,6 +15,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "sass": "^1.69.5",
     "web-vitals": "^2.1.4"
   },
